# simplefilewatcher

./: .gitignore  CMakeLists.txt  FileWatcher.pc  FileWatcher.pc.in
source/: FileWatcher.cpp  FileWatcherLinux.cpp
